--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,9 @@
-<!--
- * @Description:
- * @Autor: rui.wei
- * @Date: 2019-11-14 19:15:39
- * @Email: weirui@zhiketong.cn
- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>聆听</title>
   </head>
