--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
+    <meta name="keywords" content="阿里云服务器, vue, koa, mongodb"/>
+    <meta name="description" content="前端如何部署项目的阿里云服务器">
+    <meta name="author" content="麻不烧">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>聆听</title>
+    <title>阿里云centos部署vue全家桶+node+koa2+mongo项目</title>
   </head>
   <body>
     <noscript>
